<resources>
    <string name="app_name">NewTemplate</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_you_are_successfully_logged_in">Welcome! You are successfully logged in</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_sign_up_here">Not registered?Sign up here.</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here</string>
    <string name="name">Name:</string>
    <string name="phone_no">Phone No.</string>
    <string name="sign_up">Sign Up</string>
</resources>